# Dramacard

./: .gitignore  PROJECT_TECHNICAL_OVERVIEW.md  README.md
android-client/: README.md  settings.gradle.kts
android-client/app/: build.gradle.kts  proguard-rules.pro
audio-drama-pipeline/: README.md  index.html  requirements.txt  start_backend.sh
audio-drama-pipeline/audio_drama_pipeline/: __main__.py  config.py  routes.py  schemas.py
audio-drama-pipeline/audio_drama_pipeline/services/: audio.py  (+3 more)
demo/: .env.example  README.md  requirements.txt
demo/src/: __init__.py  batch_runner.py  choice_point_builder.py  cli.py  comfy_card_exporter.py  comfy_client.py  config.py  drama_highlight_reporter.py  ending_comic_builder.py  ending_comic_prompt_exporter.py  episode_summary_builder.py  frame_extractor.py  io_utils.py  llm_client.py  ocr_cleaner.py  ocr_engine.py  pause_point_refiner.py  pipeline.py  prompts.py  report_writer.py  series_memory.py  story_segmenter.py  subtitle_cropper.py  subtitle_merger.py  timeline_builder.py  timestamp_refiner.py  video_utils.py
release/: README.md
video-audit-platform/: .gitignore  README.md  appp_api.py  index.html  pyproject.toml  requirements.txt  start_server.sh
video-audit-platform/audio_drama_pipeline/: README.md  app.py  config.py  routes.py
video-audit-platform/audio_drama_pipeline/services/: audio.py  highlight.py  pipeline.py  transcript.py
video-audit-platform/video_audit_platform/: __main__.py  app.py  config.py  models.py  routes.py
video-audit-platform/video_audit_platform/services/: __init__.py  analysis.py
(+14 files in other folders)
